--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "stylesheet-from-rn",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "description": "Replicates the StyleSheet functionality from React Native for React web applications.",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
@@ -26,6 +26,6 @@
     "typescript": "^4.0.0"
   },
   "peerDependencies": {
-    "react": "^17.0.0"
+    "react": ">=16.8.0"
   }
 }
